# screencrab

./: .gitattributes  .gitignore  README.md  index.html  package-lock.json  package.json
screencrab/: .gitattributes  README.md  blank.html  helper.html  hotkeys.html  hotkeys_menu.html  index.html  package-lock.json  package.json  splashscreen.html  tools.html  vite.config.js  vite.config.js.timestamp-1692713995041-857724783af31.mjs  vite.config.js.timestamp-1696066087386-98c5f72ab207c.mjs  vite.config.js.timestamp-1702656596477-d638bac876293.mjs
screencrab/.cargo/: config.toml
screencrab/public/: annotation_tools.html  blank.html  helper.html  hotkeys.html  hotkeys_menu.html
screencrab/setup/: darwin.sh  debian.sh  windows.ps1
screencrab/src/: Annotations.jsx  App.css  App.jsx  Helper.jsx  Hotkeys.jsx  HotkeysMenu.jsx  Splashscreen.jsx  Tools.jsx  main_annotation_tools.jsx  main_helper.jsx  main_hotkeys.jsx  main_splashscreen.jsx  main_tools.jsx  styles.css
screencrab/src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
screencrab/src-tauri/icons/: icon.icns
screencrab/src-tauri/src/: capture.rs  darwin.rs  hotkeys.json  lib.rs  linux.rs  main.rs  menu.rs  record_custom_script.ps1  record_full_script.ps1  screenshot_custom_script.ps1  screenshot_full_script.ps1  screenshot_script.ps1  utils.rs  windows.rs
screencrab/src-tauri/src/windows/: record_custom_script.ps1  record_full_script.ps1  screenshot_full_script.ps1
src/: App.jsx
