[package]
name = "screen_crab"
version = "0.0.0"
description = "A cross-platform screen grabbing application in Rust"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["dialog-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-dialog = "0.1.1"
tauri-api = "0.7.6"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
crossbeam-channel = "0.5.8"
lazy_static = "1.4.0"



[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
