[package]
name = "screen-crab"
version = "1.0.0"
description = "A cross-platform screen grabbing utility in Rust"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
tauri = { version = "1.4.1", features = [ "api-all", "icon-png", "icon-ico", "macos-private-api", "system-tray"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
tauri-dialog = "0.1.1"
tauri-api = "0.7.6"
tokio = { version = "1.32.0", features = ["full"] }
chrono = "0.4.1"
tauri-plugin-positioner = { version = "1.0.4", features = ["system-tray"] }
tauri-runtime-wry = "0.14.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
